--- a/style.css
+++ b/style.css
@@ -60,6 +60,17 @@ body{
     
     }
 
+#rickroll{
+    display: none;
+}
+
+.cookies {
+    background-color:#2c2c2c;
+    width: 100%;
+    height: 100%;
+}
+
+
 .RickRollIMG{
     border-radius: 10%;
     width: var(--rickrollimg);
@@ -100,7 +111,7 @@ b{
     margin-left: 1vh;
     margin-right: 1vh;
     width: 1vw;
-
+    display: block;
 }
 
 @keyframes colorRotate {
