--- a/style.css
+++ b/style.css
@@ -65,11 +65,25 @@ body{
 }
 
 .cookies {
-    background-color:#2c2c2c;
+    
     width: 100%;
     height: 100%;
 }
 
+button{
+    background-color:#5e5e5e;
+    border:#5e5e5e;
+    color: rgb(187, 187, 187);
+    width: 30%;
+    border-radius: 10px;
+
+}
+
+button:hover{
+    background-color:rgb(187, 187, 187);
+    border:rgb(187, 187, 187);
+    color:#5e5e5e;
+}
 
 .RickRollIMG{
     border-radius: 10%;
